--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,17 @@ env:
   - _KERL_VSN=17.5
   - _KERL_VSN=R16B03-1
 
-before_script: set -x
+install:
+# https://github.com/kerl/kerl/issues/226#issuecomment-327915702
+# https://github.com/Homebrew/homebrew-core/issues/47348
+- |
+  if [[ "_KERL_VSN" = 2* ]]; then
+    brew install https://raw.githubusercontent.com/Homebrew/homebrew-core/64555220bfbf4a25598523c2e4d3a232560eaad7/Formula/openssl.rb -f
+    brew --prefix openssl || true
+    brew link openssl || true
+    brew --prefix openssl || true
+    export KERL_CONFIGURE_OPTIONS=--with-ssl="$(brew --prefix openssl)"
+  fi
 script:
 - ./kerl update releases
 - travis_wait 45 ./kerl build "$_KERL_VSN" "$_KERL_VSN"
