Fix RELEASE_TARGET tests

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -70,11 +70,11 @@ jobs:
               - run: |
                   apk update && apk upgrade
                   apk add curl ca-certificates \
-                    dpkg-dev dpkg \
                     gcc g++ libc-dev linux-headers make autoconf ncurses-dev tar \
                     openssl-dev lksctp-tools-dev lksctp-tools \
                     libxslt git
                   echo "export KERL_CONFIGURE_OPTIONS=--disable-hipe" >> $BASH_ENV
+                  echo 'export KERL_RELEASE_TARGET="debug opt gcov lcnt"' >> $BASH_ENV
       - when:
           condition:
             equal: [<< parameters.os >>,*debian]
@@ -85,7 +85,9 @@ jobs:
                 curl ca-certificates git autoconf dpkg-dev \
                 zlib1g-dev libncurses5-dev libssl-dev unixodbc-dev libgmp3-dev \
                 libwxgtk3.0-gtk3-dev libwxgtk-webview3.0-gtk3-dev libsctp-dev lksctp-tools \
-                build-essential gcc-9 m4 autoconf fop xsltproc default-jdk libxml2-utils procps
+                build-essential gcc-9 m4 autoconf fop xsltproc default-jdk libxml2-utils procps \
+                valgrind binutils
+              echo 'export KERL_RELEASE_TARGET="debug opt gcov gprof valgrind lcnt"' >> $BASH_ENV
       - checkout
       - run: ./kerl update releases
       - run: |
@@ -103,7 +105,6 @@ jobs:
               ;;
           esac
           echo "export _KERL_VSN=${_VERSION}" >> $BASH_ENV
-          echo 'export KERL_RELEASE_TARGET="debug opt gcov gprof valgrind lcnt" ' >> $BASH_ENV
       - run:
           no_output_timeout: 45m
           command: |
@@ -126,10 +127,12 @@ jobs:
           command: |
             . $BASH_ENV
             source $(./kerl path install_"$_KERL_VSN")/activate
-            for r_type in debug opt gcov gprof valgrind lcnt;
+            for r_type in $KERL_RELEASE_TARGET;
             do
-            [[ "${r_type}" == $(cerl -"$r_type" -noshell -eval  'io:format(erlang:system_info(build_type)),halt()') ]] \
-            || exit 1;
+              cerl -"$r_type" -noshell -eval  '{ok, D} = file:open("build_type",[write]),io:format(D, "~s",[erlang:system_info(build_type)]),halt().'
+              if [ "${r_type}" != "$(cat build_type)" ]; then
+                exit 1;
+              fi
             done
             kerl_deactivate
       - run:
