Use as much power as is available

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,6 @@ name: CI
     branches:
       - master
 env:
-  MAKEFLAGS: -j2
   ERLC_USE_SERVER: true
 jobs:
   ci:
@@ -56,6 +55,7 @@ jobs:
           echo "_KERL_VSN=${_VERSION}" >> $GITHUB_ENV
       - name: Build chosen version
         run: |
+          export MAKEFLAGS="-j$(getconf _NPROCESSORS_ONLN)"
           if ! KERL_DEBUG=true ./kerl build ${_KERL_PREFIX_GIT} ${_KERL_PREFIX_GIT_TARGET} \
                                             "${_KERL_VSN}" "${_KERL_VSN}"; then
             ## Print build log if it fails
