Fix Lint, CI, activate test

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -101,7 +101,7 @@ jobs:
           rm -f activate-csh-new
         # yamllint enable rule:line-length
       - name: Test activate/cleanup
-        run: tests/activate_test.sh $_KERL_VSN
+        run: tests/activate_test.sh install_"$_KERL_VSN"
       - name: Delete installation
         run: ./kerl delete installation $(./kerl path install_"$_KERL_VSN")
       - name: Delete build
