--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -8,8 +8,14 @@ jobs:
     steps:
       - name: Git checkout
         uses: actions/checkout@v3
-      - name: Run ShellCheck
-        uses: ludeeus/action-shellcheck@2.0.0
+      - name: Run ShellCheck and shfmt
+        uses: luizm/action-sh-checker@@v0.7.0
+        env:
+          SHELLCHECK_OPTS: -o all
+          SHFMT_OPTS: -i 4
+      - name: Check push (shfmt)
+        run: |
+          git diff --exit-code
       # uses .markdownlint.yml for configuration
       - name: Run markdownlint
         uses: DavidAnson/markdownlint-cli2-action@v10
