--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
           if [[ ${{matrix.os}} == macos* ]]; then
             /bin/bash -c "$(curl -fsSL \
               https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
-            brew install automake fop wxwidgets fish shellcheck
+            brew install automake fop wxwidgets fish shellcheck shfmt
           else
             sudo sed -i 's/azure\.//' /etc/apt/sources.list # Reduces chance of time-outs
             sudo apt-get update -y
@@ -26,7 +26,8 @@ jobs:
             sudo apt-get install -y --no-install-recommends \
               git curl libssl-dev make automake autoconf libncurses5-dev gcc g++ default-jdk \
               unixodbc-dev libwxgtk3.0-gtk3-dev libwxgtk-webview3.0-gtk3-dev xsltproc fop \
-              libxml2-utils libsctp-dev lksctp-tools software-properties-common shellcheck
+              libxml2-utils libsctp-dev lksctp-tools software-properties-common shellcheck \
+              shfmt
             sudo apt-add-repository -y ppa:fish-shell/release-3
             sudo apt-get update -y
             sudo apt-get install -y --no-install-recommends fish
@@ -92,6 +93,7 @@ jobs:
           ./kerl emit-activate $_KERL_REL $_KERL_VSN $(./kerl path install_"$_KERL_VSN") > activate-new
           diff activate-new $(./kerl path install_"$_KERL_VSN")/activate
           shellcheck -o all activate-new
+          shfmt -i 4 -d activate-new
           rm -f activate-new
       - name: Test emit-activate (fish)
         run: |
