--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -12,10 +12,7 @@ jobs:
         uses: luizm/action-sh-checker@v0.7.0
         env:
           SHELLCHECK_OPTS: -o all
-          SHFMT_OPTS: -i 4
-      - name: Check push (shfmt)
-        run: |
-          git diff --exit-code
+          SHFMT_OPTS: -i 4 -d
       # uses .markdownlint.yml for configuration
       - name: Run markdownlint
         uses: DavidAnson/markdownlint-cli2-action@v10
