--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,7 @@ name: CI
 'on': [push, pull_request]
 env:
   ERLC_USE_SERVER: true
-  KERL_DEBUG: yes
+  KERL_DEBUG: 'yes'
 jobs:
   ci:
     name: CI OTP ${{matrix.otp_vsn}}, on ${{matrix.os}}
