--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,6 +58,7 @@ jobs:
               echo '_KERL_PREFIX_GIT=git' >> $GITHUB_ENV
               echo '_KERL_PREFIX_GIT_TARGET=https://github.com/erlang/otp.git' >> $GITHUB_ENV
               echo 'KERL_BUILD_DOCS=yes' >> $GITHUB_ENV
+              echo 'KERL_DOC_TARGETS="html chunks"' >> $GITHUB_ENV
               _KERL_REL=git
               ;;
             *)
