--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,8 +36,8 @@ jobs:
             sudo apt-get update -y
             sudo apt-get upgrade -y
             sudo apt-get install -y --no-install-recommends \
-              git curl libssl-dev make automake autoconf libncurses5-dev gcc g++ default-jdk \
-              unixodbc-dev libwxgtk3.0-gtk3-dev libwxgtk-webview3.0-gtk3-dev xsltproc \
+              git curl libssl-dev make automake autoconf libncurses-dev gcc g++ default-jdk \
+              unixodbc-dev libwxgtk3.2-dev libwxgtk-webview3.2-dev xsltproc \
               libxml2-utils libsctp-dev lksctp-tools software-properties-common shellcheck \
               shfmt
             sudo apt-add-repository -y ppa:fish-shell/release-3
