Force CI env. variable even if not set by GitHub Actions
It's a fairly common practice (that the CI environment sets
this variable), but it seems GitHub Actions might not always
honor this "tradition", so we force it

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,7 @@ concurrency:
 env:
   ERLC_USE_SERVER: true
   KERL_DEBUG: 'yes'
+  CI: true
 jobs:
   ci:
     name: CI OTP ${{matrix.otp_vsn}}, on ${{matrix.os}}
